--- a/fetch csv data/index.html
+++ b/fetch csv data/index.html
@@ -12,8 +12,32 @@
 <canvas id="myChart" width="400" height="200"></canvas>
 
 <script>
+
+
     // Data from: https://data.giss.nasa.gov/gistemp/
     // Mean from: https://earthobservatory.nasa.gov/world-of-change/DecadalTemp
+
+    // body fetch https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch#Body
+
+    // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/split
+    const getData = async () => {
+        const response = await fetch('ZonAnn.Ts+dSST.csv')
+        const data = await response.text()
+        console.log(data)
+        //return data
+
+        const rows = data.split('\n').slice(1)
+        rows.forEach(elt => {
+            const row = elt.split(',')
+            const year = row[0]
+            const temp = row[1]
+            console.log(year, temp)
+        })
+
+    }
+
+    getData()
+
 
 </script>
 </body>
