--- a/fetch csv data/index.html
+++ b/fetch csv data/index.html
@@ -21,17 +21,21 @@
 
     // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/split
     const getData = async () => {
-        const response = await fetch('ZonAnn.Ts+dSST.csv')
+        const response = await fetch('testdata.csv')
+        //const response = await fetch('ZonAnn.Ts+dSST.csv')
         const data = await response.text()
         console.log(data)
         //return data
 
-        const rows = data.split('\n').slice(1)
-        rows.forEach(elt => {
-            const row = elt.split(',')
-            const year = row[0]
-            const temp = row[1]
+        const table = data.split('\n').slice(1)
+        console.log(table)
+        table.forEach(row => {
+            const columns = row.split(',')
+            console.log(columns)
+            const year = columns[0]
+            const temp = columns[1]
             console.log(year, temp)
+
         })
 
     }
