--- a/fetch csv data/index.html
+++ b/fetch csv data/index.html
@@ -14,9 +14,14 @@
 
 <script>
 
-    function chartJs() {
+    const xlabels = []
+
+
+    chartJs()
+    async function chartJs() {
+        await getData()
         const ctx = document.getElementById('myChart').getContext('2d');
-        const xlabels = []
+
         const myChart = new Chart(ctx, {
             type: 'bar',
             data: {
@@ -26,19 +31,19 @@
                     data: [12, 19, 3, 5, 2, 3],
                     backgroundColor: [
                         'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        // 'rgba(54, 162, 235, 0.2)',
+                        // 'rgba(255, 206, 86, 0.2)',
+                        // 'rgba(75, 192, 192, 0.2)',
+                        // 'rgba(153, 102, 255, 0.2)',
+                        // 'rgba(255, 159, 64, 0.2)'
                     ],
                     borderColor: [
                         'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        // 'rgba(54, 162, 235, 1)',
+                        // 'rgba(255, 206, 86, 1)',
+                        // 'rgba(75, 192, 192, 1)',
+                        // 'rgba(153, 102, 255, 1)',
+                        // 'rgba(255, 159, 64, 1)'
                     ],
                     borderWidth: 1
                 }]
@@ -73,7 +78,7 @@
     // body fetch https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch#Body
 
     // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/split
-    const getData = async () => {
+    async function getData() {
         const response = await fetch('ZonAnn.Ts+dSST.csv')
         //const response = await fetch('ZonAnn.Ts+dSST.csv')
         const data = await response.text()
@@ -95,7 +100,7 @@
 
     }
 
-    getData()
+
 
 
 </script>
