--- a/fetch csv data/index.html
+++ b/fetch csv data/index.html
@@ -14,40 +14,66 @@
 
 <script>
 
-    const xlabels = []
 
 
     chartJs()
     async function chartJs() {
-        await getData()
+        const data = await getData()
         const ctx = document.getElementById('myChart').getContext('2d');
 
         const myChart = new Chart(ctx, {
-            type: 'bar',
+            type: 'line',
             data: {
-                labels: xlabels,
+                labels: data.xs,
                 datasets: [{
                     label: 'Global Average Temperatures',
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: [
+                    data: data.ys,
+                    backgroundColor:
                         'rgba(255, 99, 132, 0.2)',
                         // 'rgba(54, 162, 235, 0.2)',
                         // 'rgba(255, 206, 86, 0.2)',
                         // 'rgba(75, 192, 192, 0.2)',
                         // 'rgba(153, 102, 255, 0.2)',
-                        // 'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
+                        // 'rgba(255, 159, 64, 0.2)',
+                    borderColor:
                         'rgba(255, 99, 132, 1)',
                         // 'rgba(54, 162, 235, 1)',
                         // 'rgba(255, 206, 86, 1)',
                         // 'rgba(75, 192, 192, 1)',
                         // 'rgba(153, 102, 255, 1)',
                         // 'rgba(255, 159, 64, 1)'
-                    ],
+
+                    borderWidth: 1,
+                    fill: false
+                }, {
+                    label: 'Northern Hemisphere Temperature in °C',
+                    data: data.northern,
+                    fill: false,
+                    borderColor: 'rgba(99, 132, 255, 1)',
+                    backgroundColor: 'rgba(99, 132, 255, 0.5)',
                     borderWidth: 1
-                }]
+                },
+                    {
+                        label: 'Souther Hemisphere in °C',
+                        data: data.southern,
+                        fill: false,
+                        borderColor: 'rgba(99, 255, 132, 1)',
+                        backgroundColor: 'rgba(99, 255, 132, 0.5)',
+                        borderWidth: 1
+                    }]
             },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            // Include a dollar sign in the ticks
+                            callback: function(value, index, values) {
+                                return  value + '°';
+                            }
+                        }
+                    }]
+                }
+            }
             //options: {
             //     scales: {
             //         yAxes: [{
@@ -79,6 +105,13 @@
 
     // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/split
     async function getData() {
+
+        const xs = []
+        const ys = []
+        const northern = [];
+        const southern = [];
+
+
         const response = await fetch('ZonAnn.Ts+dSST.csv')
         //const response = await fetch('ZonAnn.Ts+dSST.csv')
         const data = await response.text()
@@ -92,11 +125,16 @@
             //console.log(row)
             console.log(columns)
             const year = columns[0]
-            xlabels.push(year)
+            xs.push(year)
             const temp = columns[1]
+            ys.push(parseFloat(temp) + 14)
+            northern.push(14 + parseFloat(columns[2]));
+            southern.push(14 + parseFloat(columns[3]));
             console.log(year, temp)
 
         })
+
+        return { xs, ys, northern, southern}
 
     }
 
