--- a/iss/index.html
+++ b/iss/index.html
@@ -17,7 +17,7 @@
     ></script>
     <style>
         #issMap {
-            height: 180px;
+            height: 400px;
         }
     </style>
 
@@ -31,11 +31,22 @@
     longitude: <span id="lon"></span>°
 </p>
 
-<div id="issMap"></div>
+<div id="issMap">
+
+</div>
 
 <script>
 
     const url = 'https://api.wheretheiss.at/v1/satellites/25544'
+
+    const mymap = L.map('issMap').setView([0, 0], 1);
+
+    const attribution =
+        '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+
+    const tileUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+    const tiles = L.tileLayer(tileUrl, { attribution });
+    tiles.addTo(mymap);
 
     async function getIss() {
         const response = await fetch(url)
