--- a/iss/index.html
+++ b/iss/index.html
@@ -37,12 +37,23 @@
 
 <script>
 
-    const url = 'https://api.wheretheiss.at/v1/satellites/25544'
-
+    // making a map and tiles
     const mymap = L.map('issMap').setView([0, 0], 1);
-
     const attribution =
         '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+
+    // Making a marker with a custom icon
+    const issIcon = L.icon({
+        iconUrl: 'iss200.png',
+        iconSize: [50, 32],
+        iconAnchor: [25, 16]
+    });
+
+    const marker = L.marker([0, 0], { icon: issIcon }).addTo(mymap)
+
+
+
+    const url = 'https://api.wheretheiss.at/v1/satellites/25544'
 
     const tileUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
     const tiles = L.tileLayer(tileUrl, { attribution });
@@ -53,6 +64,10 @@
         const data = await response.json()
         const {longitude, latitude} = data
         console.log(longitude, latitude)
+
+        //L.marker([latitude, longitude]).addTo(mymap);
+        marker.setLatLng([latitude, longitude])
+
         document.getElementById('lat').textContent = latitude
         document.getElementById('lon').textContent = longitude
     }
