--- a/iss/index.html
+++ b/iss/index.html
@@ -38,7 +38,7 @@
 <script>
 
     // making a map and tiles
-    const mymap = L.map('issMap').setView([0, 0], 1);
+    const mymap = L.map('issMap').setView([0, 0], 6);
     const attribution =
         '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
 
@@ -59,6 +59,8 @@
     const tiles = L.tileLayer(tileUrl, { attribution });
     tiles.addTo(mymap);
 
+    let firstTime = true
+
     async function getIss() {
         const response = await fetch(url)
         const data = await response.json()
@@ -66,12 +68,22 @@
         console.log(longitude, latitude)
 
         //L.marker([latitude, longitude]).addTo(mymap);
+        mymap.setView([latitude, longitude], mymap.getZoom())
         marker.setLatLng([latitude, longitude])
 
-        document.getElementById('lat').textContent = latitude
-        document.getElementById('lon').textContent = longitude
+        //if(firstTime) {
+
+            //firstTime = false
+        //}
+
+
+
+        document.getElementById('lat').textContent = latitude.toFixed(2)
+        document.getElementById('lon').textContent = longitude.toFixed(2)
     }
     getIss()
+
+    setInterval(getIss, 1000)
 </script>
 </body>
 </html>
