--- a/fetch csv data/index.html
+++ b/fetch csv data/index.html
@@ -125,7 +125,7 @@
             ys.push(parseFloat(temp) + 14)
             northern.push(14 + parseFloat(columns[2]));
             southern.push(14 + parseFloat(columns[3]));
-            //console.log(year, temp + 14, parseFloat(temp) + 14)
+            console.log(year, temp + 14, parseFloat(temp) + 14, xs, ys)
 
         })
 
